enable clear prevent overflow with width = 100% on rs control

--- a/cmp/grid/ag-grid/styles.scss
+++ b/cmp/grid/ag-grid/styles.scss
@@ -44,12 +44,6 @@
 
       .xh-grid-header-menu-icon {
         cursor: pointer;
-        svg {
-          visibility: hidden;
-        }
-        &:hover svg {
-          visibility: visible;
-        }
       }
     }
   }
